# PhotoSharp

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/src/: align.rs  decode.rs  gray.rs  image_io.rs  lib.rs  pipeline.rs  quality.rs  rgb.rs  roi.rs  sharpen.rs  stack.rs  synthetic.rs
docs/: ADR-0001-architecture.md  ROADMAP.md
gui/: Cargo.toml
gui/src/: main.rs
