[package]
name = "photosharp-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "PhotoSharp command-line interface."

[[bin]]
name = "photosharp"
path = "src/main.rs"

[dependencies]
photosharp-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
