[package]
name = "photosharp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core lucky-imaging pipeline: frame grading, FFT registration, stacking, sharpening."

[dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "tiff"] }
rustfft = "6"
rayon = "1"
rand = "0.8"
anyhow = "1"
